Modify BotUser class method